ftps/2.0/modules/ROOT/pages/ftps-troubleshooting.adoc
= Troubleshoot FTPS Connector - Mule 4

To troubleshoot Anypoint Connector for FTPs (FTPS Connector), become familiar with the information about troubleshooting Mule application issues.

== Troubleshoot Mule Application Issues

Sometimes you are not sure why the application is failing and you require a better understanding of what is going on in the app's interaction with the FTPS server.

To resolve this error:

* Use the configuration file to increase the logging level on the server side.

* Try to replicate the issue using an FTPS client, for example, Cyberduck or Filezilla. If the issue also occurs with these clients, then it is likely that the issue is not related to the Mule app.

* Get better and more detailed logs on the Mule app side by enabling verbose logging for FTPS Connector and for the JSCH driver:
+
. Access Anypoint Studio and navigate to the *Package Explorer* view.
. Open your application's project name.
. Open the `src/main/resources` path folder.
. Open the `log4j2.xml` file inside the folder.
. If the following line is already in the `log4j2.xml` file, uncomment it to enable it; otherwise, add it:
+
[source,xml,linenums]
----
  <AsyncLogger name=“org.mule.extension.ftp” level=“TRACE”/>
  <AsyncLogger name=“org.apache.commons.net” level=“DEBUG”/>
----
[start=6]
. Add the following argument to your run configuration:
+
 `-M-Djavax.net.debug=ssl,handshake`

* Try to minimize or remove unnecessary DataWeave data transformations (you could even use hard coded data) to minimize the app's complexity and determine whether the issue is with the interaction between the app and the FTPS server.

For additional information about enabling verbose logging for SDK components in your Mule application, see the xref:mule-sdk::troubleshooting.adoc[troubleshoot SDK components] documentation.

[[common-throws]]
== Handling FTPS Session Reuse Errors
When using the FTPS connector, you may encounter connection issues during session reuse such as a `SocketTimeoutException` during data connection.
To resolve this, set the following JVM system property in your runtime configuration:

`-Dorg.apache.commons.net.ftp.ipAddressFromPasvResponse=true`
[NOTE]
====
This setting ensures the correct IP address from the PASV response is used during data transfer.
**However, be aware that enabling this flag may expose your application to potential security vulnerabilities** if the PASV response is spoofed or manipulated. Use with caution, especially in untrusted network environments.
====

[[common-throws]]
== Understand Common Throws

Here is a list of common throws messages and how to interpret them.

* FTPS:ACCESS_DENIED

An FTPS Connector operation attempted to access an FTPS server path and performed an action for which the user has not been granted permission.

* FTPS:CONNECTIVITY

The connection to the FTPS server was interrupted.

* FTPS:FILE_ALREADY_EXISTS

An attempt was made to create a file with the same location and name as an existing file.

* FTPS:FILE_LOCK

An operation made an unsuccessful attempt to acquire a lock over a file.

* FTPS:ILLEGAL_CONTENT

The *Write* operation received invalid content to write.

* FTPS:ILLEGAL_PATH

The specified path is invalid because, for example, it does not exist.

* FTPS:RETRY_EXHAUSTED

Retries of a certain execution block are exhausted.


== See Also
* https://help.mulesoft.com[MuleSoft Help Center]
* xref:ftps-documentation.adoc[FTPS Connector Reference]
